--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+/*
+COLORS
+Dark blue #0E3B43
+Medium blue #006261
+Aqua #208A72
+Green #5CB277
+*/
+
 #mapContainer {
     width: 700px;
     height: 375px;
