agrega persistencia de usuario

--- a/views/home.html
+++ b/views/home.html
@@ -23,25 +23,8 @@
 </head>
 
 <body>
-    <main class="container">
-        <section class="row mt-4">
-            <div class="mx-auto" id="mapContainer"></div>
-        </section>
-        <section id="form">
-            <h3 class="text-center my-5">Agrega un comentario</h3>
-            <input type="text" id="job" placeholder="Especialidad" class="form-control my-3">
-            <input type="text" id="company" placeholder="Empresa" class="form-control my-3">
-            <input type="number" id="rating" placeholder="Calificacion" class="form-control my-3">
-            <input type="text" id="recommendation" placeholder="Recomiendas este lugar?" class="form-control my-3">
-            <input type="text" id="comment" placeholder="Por que recomiendas (o no)?" class="form-control my-3">
-            <button id="add-review">Agregar reseña</button>
-        </section>
-        <section class="row">
-            <section class="col-12">
-                <h3 class="text-center my-3">Comentarios</h3>
-                <section id="reviews"></section>
-            </section>
-        </section>
+    <main class="container" id="container">
+        
     </main>
 
     <script src="../js/keys.js"></script>
